# Verde

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  adding-cover-letter-helper.md  adding-questions.md  docker-compose.yml  docker-tutorila.md  profile-architecture.md  pyproject.toml  requirements.txt  rxconfig.py  test-coverage-gap-analysis.md  updating-app.md
.github/agents/: Architect.agent.md  Builder.agent.md
.github/workflows/: pytest.yml
app/: app.py  state.py
app/components/: __init__.py  clarification_form.py  profile_editor.py  top_nav.py  upload_panel.py
app/models/: clarification.py  cover_helper.py  parsing.py  profile.py
app/pages/: __init__.py  clarification.py  cover_helper_results.py  index.py  job_input.py  loading.py  profile.py
app/prompts/: profile_prompt.txt
app/services/: aggregate_input.py  cover_letter_helper.py  file_storage.py  gap_detector.py  google_profile_builder.py  profile_refiner.py  profile_store.py  text_extract.py
tests/: test_cover_helper_state_flow.py  test_cover_letter_helper.py  test_coverage_gap_execution_checklist.py  test_gap_detector.py  test_google_profile_builder.py  test_profile_refiner.py  test_profile_schema.py  test_text_extract.py
